<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo_amikom"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/data_profile"
                android:textColor="@color/donker"
                android:textSize="40sp"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/nama_lengkap"
                        android:textColor="@color/donker"
                        android:textSize="16sp"/>

                <EditText
                        android:id="@+id/eNama"
                        android:layout_width="312dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/nama_pengguna"
                        android:textColor="@color/donker"
                        android:textSize="16sp"/>

                <EditText
                        android:id="@+id/eUser"
                        android:layout_width="312dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="text"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/email"
                        android:textColor="@color/donker"
                        android:textSize="16sp"/>

                <EditText
                        android:id="@+id/eEmail"
                        android:layout_width="312dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="textEmailAddress"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/asal"
                        android:textColor="@color/donker"
                        android:textSize="16sp"/>

                <EditText
                        android:id="@+id/eAsal"
                        android:layout_width="312dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>

        <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@color/donker"
                android:fontFamily="@font/montserrat"
                android:text="@string/simpan"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>